tests/ShouldFail/bad_intro.8pus
Goal(A -> A).
intro x.
intro y.
Qed.